# my-website

./: .gitignore  98.css  Cargo.toml  Trunk.toml  index.html  style.css
.github/workflows/: deploy.yml
assets/: 98.css
assets/98/: style.css
assets/backgrounds/: 1.webm  10.webm  11.webm  12.webm  13.webm  14.webm  15.webm  16.webm  17.webm  18.webm  19.webm  2.webm  20.webm  21.webm  22.webm  3.webm  4.webm  5.webm  6.webm  7.webm  8.webm  9.webm
src/: copland.rs  main.rs  window.rs
src/windows/: about_me.rs  background_selector.rs  films.rs  home.rs  introduction.rs  mod.rs  photo_viewer.rs  projects.rs  socials.rs  spotify.rs  sticky_note.rs
