[package]
name = "my-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo = "0.8.0"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["DomRect", "Element", "Touch", "TouchList", "TouchEvent", "HtmlAudioElement", "HtmlMediaElement", "HtmlButtonElement", "HtmlVideoElement", "HtmlMediaElement"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.33"
futures = "0.3.24"
serde_json = "1.0"
serde = "1.0.145"
js-sys = "0.3.60"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
